--- a/app/views/trips/_trip_form.html.erb
+++ b/app/views/trips/_trip_form.html.erb
@@ -1,4 +1,4 @@
-<tr>
+ <tr>
   <td>
     <%= trip.pickup_time.strftime("%l:%M %p") %>
   </td>
@@ -43,14 +43,14 @@
     <%= trip_fields.select :trip_result_id, @trip_results, :include_blank => true %>
   </td>
   <td class="nowrap">
-    <%= link_to "Edit Trip", [:edit,trip], :class => "edit" %>
+    <%= link_to translate_helper("edit_trip_link_text"), [:edit,trip], :class => "edit" %>
   </td>
   <% if show_edit_run_link %>
     <td class="nowrap">
       <% if trip.run.present? %>
-        <%= link_to("Edit Run", [:edit,trip.run], :class => "edit") %>
+        <%= link_to(translate_helper("edit_run_link_text"), [:edit,trip.run], :class => "edit") %>
       <% elsif trip.cab %>
-        Cab Trip
+        <%= translate_helper("cab_trip") %>
       <% end %>
     </td>
   <% end %>
