label translations for trips [#98320888]

--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>Editing Trip</h1>
+  <h1><%= translate_helper("editing_trip") %></h1>
   <%= render :partial => 'weekday_select' %>
   <div class="clearfix"></div>
 </div>
