--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>New trip</h1>
+  <h1><%= translate_helper("new_trip") %></h1>
 </div>
 
 <div id="calendar" data-start-time="<%= @week_start.to_i * 1000 %>"></div>
