--- a/app/views/trips/unscheduled.html.erb
+++ b/app/views/trips/unscheduled.html.erb
@@ -4,11 +4,11 @@
 
 <table>
   <tr>
-    <th>Customer</th>
-    <th>Pickup Time</th>
-    <th>Trip Purpose</th>
-    <th>From</th>
-    <th>To</th>
+    <th><%= translate_helper("customer") %></th>
+    <th><%= translate_helper("pickup_time") %></th>
+    <th><%= translate_helper("trip_purpose") %></th>
+    <th><%= translate_helper("trip_from") %></th>
+    <th><%= translate_helper("trip_to") %></th>
     <th></th>
     <th></th>
   </tr>
@@ -20,8 +20,8 @@
     <td><%= trip.trip_purpose_name %></td>
     <td><%= trip.pickup_address.text %></td>
     <td><%= trip.dropoff_address.text %></td>
-    <td><%= button_to 'Confirm', trip_confirm_path(trip) %></td>
-    <td><%= button_to 'Turn down', trip_turndown_path(trip) %></td>
+    <td><%= button_to translate_helper("trip_confirm"), trip_confirm_path(trip) %></td>
+    <td><%= button_to translate_helper("trip_turn_down"), trip_turndown_path(trip) %></td>
   </tr>
 <% end %>
 </table>
