--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -29,7 +29,7 @@
       </li>
 
       <li class="selfclear timepicker">
-        <%= f.label :appointment_time, translate_helper("appointment_time:") %>
+        <%= f.label :appointment_time, translate_helper("appointment_time") %>
         <%= f.text_field :appointment_time, :value => @trip.appointment_time.try(:to_s, :form) %>
       </li>
 
