--- a/app/views/vehicles/edit.html.erb
+++ b/app/views/vehicles/edit.html.erb
@@ -1,10 +1,10 @@
 <div id="page-header">
-  <h1>Edit Vehicle</h1>
+  <h1><%= translate_helper("edit_vehicle_heading") %></h1>
 </div>
 
 <%= render :partial=>"form" %>
 
 <% if current_user && can?(:edit, Provider) %>
 <hr />
-<%= link_to 'Back', provider_path(current_user.current_provider), :class=>'action-bttn' %>
+<%= link_to translate_helper("back_to_provider"), provider_path(current_user.current_provider), :class=>'action-bttn' %>
 <% end %>
