--- a/app/views/vehicles/new.html.erb
+++ b/app/views/vehicles/new.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>Create New Vehicle</h1>
+  <h1><%= translate_helper("new_vehicle_heading") %></h1>
 </div>
 
 <%= render :partial=>"form" %>
