--- a/app/views/lookup_tables/_delete_value_button.html.haml
+++ b/app/views/lookup_tables/_delete_value_button.html.haml
@@ -22,7 +22,7 @@
     $('#deleteLookupTableValueDialog').on('show.bs.modal', function (e) {
       var form = $(this).find('form');
       var baseUrl = "#{destroy_value_lookup_table_path(table)}";
-      var currentValue = $('#lookup_table').DataTable().row($('#lookup_table .selected')).data();
+      var currentValue = $('#lookupTable').DataTable().row($('#lookupTable .selected')).data();
       var newUrl = baseUrl + "?value=" + currentValue;
       form.prop('action', newUrl);
       form.find('.modal-body').html(confirm_delete_message.replace('%{value}', currentValue));
