--- a/app/views/lookup_tables/_dropdown.html.haml
+++ b/app/views/lookup_tables/_dropdown.html.haml
@@ -1,7 +1,7 @@
 %h4
   = translate_helper(:lookup_table)
 - table_id = table.try(:id)
-%select.form-control.lookup-table-list{onChange:"window.location.href=this.value"}
+%select.form-control.lookup-table-list#lookupTableList{onChange:"window.location.href=this.value"}
   - tables.each do |table|
     - if table.id == table_id
       %option{value: "#{lookup_table_path(table)}", selected: true}
