more merge and cleanup test

--- a/app/views/cab_trips/edit_multiple.html.erb
+++ b/app/views/cab_trips/edit_multiple.html.erb
@@ -1,4 +1,4 @@
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1>translate_helper("edit_multi_cab_heading", formatted_week: (@week_start.strftime "%m-%d-%Y"))</h1>
 </div>
 
