--- a/app/views/cab_trips/index.html.erb
+++ b/app/views/cab_trips/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'cab_trips' %>
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%=translate_helper("listing_cab_runs")%></h1>
 </div>
 
