--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/highlight_active_tab_js', is_primary_nav: false, tab_class: 'vehicles-drivers-users' %>
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("show_provider_heading", provider: @provider.name) %></h1>
 </div>
 
