--- a/app/views/reports/cab.html.erb
+++ b/app/views/reports/cab.html.erb
@@ -1,4 +1,4 @@
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("cab_log_heading") %></h1>
   <h3><%= @query.start_date.strftime("%B %Y") %></h3>
 </div>
