--- a/app/views/reports/service_summary.html.erb
+++ b/app/views/reports/service_summary.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :title, translate_helper("service_summary_title",provider:@provider.name,start_date:@start_date.strftime("%B %Y")) %>
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("service_summary_heading") %></h1>
 </div>
 
