--- a/app/views/reports/vehicles_monthly.html.erb
+++ b/app/views/reports/vehicles_monthly.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :title, translate_helper("vehicle_operations_title",provider:@provider.name,start_date:@start_date.strftime("%B %Y")) %>
 
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("vehicle_operations_heading") %></h1>
 </div>
 
