--- a/app/views/runs/edit.html.erb
+++ b/app/views/runs/edit.html.erb
@@ -1,4 +1,4 @@
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("editing_run_heading", run_date: @run.date.to_s(:long)) %></h1>
 </div>
 
