--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'runs' %>
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("run_index_heading") %></h1>
 </div>
 
