--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'trips' %>
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("view_trips") %></h1>
   <%= render :partial => 'weekday_select' %>
   <div class="clearfix"></div>
