--- a/app/views/vehicle_maintenance_events/new.html.erb
+++ b/app/views/vehicle_maintenance_events/new.html.erb
@@ -1,4 +1,4 @@
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("new_maintenance_heading") %></h1>
 </div>
 
