--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -1,4 +1,4 @@
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("provider_index_heading") %></h1>
 </div>
 
