--- a/app/views/reports/age_and_ethnicity.html.erb
+++ b/app/views/reports/age_and_ethnicity.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :title, translate_helper("age_and_ethnicity_page_title", provider:@provider.name, start_date: @start_date.strftime("%B %Y")) %>
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("age_and_ethnicity_report_heading") %></h1>
 </div>
 
