--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,4 +1,4 @@
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("editing_trip") %></h1>
   <%= render :partial => 'weekday_select' %>
   <div class="clearfix"></div>
