--- a/app/views/users/show_change_password.html.erb
+++ b/app/views/users/show_change_password.html.erb
@@ -1,4 +1,4 @@
-<div id="page-header">
+<div id="page-header" class="clearfix">
   <h1><%= translate_helper("change_password_heading") %></h1>
 </div>
 
